5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4160/executions/1637_2445.log
== TEST (2019-04-10 00:02:01) 
-- CODE:
escala = input("Digite a escala: ")
temp = float(input("Digite o valor da temperatura: "))
C = (5/9) * (F - 32)

if(temp == C):
	resp = (5/9) * (F - 32)
   print(resp)
else: 
	resp = (9*C + 32)/5
	print(resp)
-- ERROR:
File "XXXX", line 7
    print(resp)
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 00:02:26) 
-- CODE:
escala = input("Digite a escala: ")
temp = float(input("Digite o valor da temperatura: "))
C = (5/9) * (F - 32)
if(temp == C):
	resp = (5/9) * (F - 32)
   print(resp)
else: 
	resp = (9*C + 32)/5
	print(resp)
-- ERROR:
File "XXXX", line 6
    print(resp)
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 00:03:00) 
-- CODE:
escala = input("Digite a escala: ")
temp = float(input("Digite o valor da temperatura: "))
C = (5/9) * (F - 32)
if(temp == C):
	resp = (5/9) * (F - 32)
	print(resp)
else: 
	resp = (9*C + 32)/5
	print(resp)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    C = (5/9) * (F - 32)
NameError: name 'F' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 00:03:16) 
-- CODE:
escala = input("Digite a escala: ")
temp = float(input("Digite o valor da temperatura: "))

if(temp == C):
	resp = (5/9) * (F - 32)
	print(resp)
else: 
	resp = (9*C + 32)/5
	print(resp)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(temp == C):
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 00:03:55) 
-- CODE:
escala = input("Digite a escala: ")
temp = float(input("Digite o valor da temperatura: "))
C = celsius
F = fahrenheit
if(temp == C):
	resp = (5/9) * (F - 32)
	print(resp)
else: 
	resp = (9*C + 32)/5
	print(resp)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    C = celsius
NameError: name 'celsius' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 00:04:27) 
-- CODE:
escala = input("Digite a escala: ")
temp = float(input("Digite o valor da temperatura: "))

if(temp == "C"):
	resp = (5/9) * (F - 32)
	print(resp)
else: 
	resp = (9*C + 32)/5
	print(resp)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    resp = (9*C + 32)/5
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 00:05:01) 
-- CODE:
escala = input("Digite a escala: ")
temp = float(input("Digite o valor da temperatura: "))

if(temp == "C"):
	resp = (5/9) * (escala - 32)
	print(resp)
else: 
	resp = (9*escala + 32)/5
	print(resp)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    resp = (9*escala + 32)/5
TypeError: must be str, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 00:06:05) 
-- CODE:
escala = input("Digite a escala: ")
temp = float(input("Digite o valor da temperatura: "))

if(temp == "C"):
	resp = (5/9) * (temp - 32)
	print(resp)
else: 
	resp = (9*temp + 32)/5
	print(resp)
	
-- OUTPUT:
582.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 00:06:12) 
-- CODE:
escala = input("Digite a escala: ")
temp = float(input("Digite o valor da temperatura: "))

if(temp == "C"):
	resp = (5/9) * (temp - 32)
	print(resp)
else: 
	resp = (9*temp + 32)/5
	print(resp)
	
-- OUTPUT:
582.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 00:07:06) 
-- CODE:
escala = input("Digite a escala: ")
temp = float(input("Digite o valor da temperatura: "))

if(temp == "C"):
	resp = (5 * temp - 32) /9 
	print(resp)
else: 
	resp = (9*temp + 32)/5
	print(resp)
	
-- OUTPUT:
582.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 00:08:10) 
-- CODE:
escala = input("Digite a escala: ")
temp = float(input("Digite o valor da temperatura: "))

if(temp == "C"):
	resp = (5 * temp) - 32 /9 
	print(resp)
else: 
	resp = (9*temp + 32)/5
	print(resp)
	
-- OUTPUT:
582.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 00:08:11) 
-- CODE:
escala = input("Digite a escala: ")
temp = float(input("Digite o valor da temperatura: "))

if(temp == "C"):
	resp = (5 * temp) - 32 /9 
	print(resp)
else: 
	resp = (9*temp + 32)/5
	print(resp)
	
-- OUTPUT:
582.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 00:10:52) 
-- CODE:
escala = input("Digite a escala: ")
temp = float(input("Digite o valor da temperatura: "))

if(temp == "C"):
	resp = (5/9)*(F-32)
	print(resp)
else: 
	resp = (9*temp + 32)/5
	print(resp)
	
-- OUTPUT:
582.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 00:11:49) 
-- CODE:
escala = input("Digite a escala: ")
temp = float(input("Digite o valor da temperatura: "))

if(temp == "C"):
	resp = (5/9)*temp-32
	print(resp)
else: 
	resp = (9/5)*temp + 32
	print(resp)
	
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 00:12:59) 
-- CODE:
escala = input("Digite a escala: ")
temp = float(input("Digite o valor da temperatura: "))

if(temp == "C"):
	resp = temp - 32 * (5/9)
	print(resp)
else: 
	resp = (9/5)*temp + 32
	print(resp)
	
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 00:13:11) 
-- CODE:
escala = input("Digite a escala: ")
temp = float(input("Digite o valor da temperatura: "))

if(temp == "C"):
	resp = (temp - 32 )* (5/9)
	print(resp)
else: 
	resp = (9/5)*temp + 32
	print(resp)
	
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 00:13:59) 
-- CODE:
escala = input("Digite a escala: ")
temp = float(input("Digite o valor da temperatura: "))

if(temp == "C"):
	resp = (temp - 32 )* (5/9)
	print(resp)
else: 
	resp = (9*temp)- 32/5
	print(resp)
	
-- OUTPUT:
2873.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 00:15:01) 
-- CODE:
escala = input("Digite a escala: ")
temp = float(input("Digite o valor da temperatura: "))

if(temp == "C"):
	resp = (temp - 32 )* (5/9)
	print(resp)
else: 
	resp = ((9 *temp)- 32)/5
	print(resp)
	
-- OUTPUT:
569.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 00:16:15) 
-- CODE:
escala = input("Digite a escala: ")
temp = float(input("Digite o valor da temperatura: "))

if(temp == "C"):
	resp = ((5 * temp) - 160)/9
	print(resp)
else: 
	resp = ((9 *temp)- 32)/5
	print(resp)
	
-- OUTPUT:
569.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 00:16:42) 
-- CODE:
escala = input("Digite a escala: ")
temp = float(input("Digite o valor da temperatura: "))

if(temp == "C"):
	resp = ((5 * temp) - 160)/9
	print(resp)
else: 
	resp = ((9 *temp)- 288)/5
	print(resp)
	
-- OUTPUT:
518.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 00:18:15) 
-- CODE:
escala = input("Digite a escala: ")
temp = float(input("Digite o valor da temperatura: "))

if(temp == "C"):
	resp = ((5 * temp) - 160)/9
	print(resp)
else: 
	resp = ((9 *temp)- 288)/5
	print(resp)
	
-- OUTPUT:
518.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 00:19:06) 
-- CODE:
escala = input("Digite a escala: ")
temp = float(input("Digite o valor da temperatura (C/F): "))

if(temp == "C"):
	resp = ((5 * temp) - 160)/9
	print(resp)
else: 
	resp = ((9 *temp)- 288)/5
	print(resp)
	
-- OUTPUT:
518.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 00:19:32) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))

if(temp == "C"):
	resp = ((5 * temp) - 160)/9
	print(resp)
else: 
	resp = ((9 *temp)- 288)/5
	print(resp)
	
-- OUTPUT:
518.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 00:20:24) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))

if(temp == "C"):
	resp = ((9 *temp)- 288)/5
	print(resp)
else: 
	resp = ((5 * temp) - 160)/9
	print(resp)
	
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 00:20:51) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))

if(temp == "C"):
	resp = ((9 *temp)- 288)/5
	print(resp(round,2))
else: 
	resp = ((5 * temp) - 160)/9
	print(resp(round,2))
	
-- EXECUTION TIME:
0.171376
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2445/main.py", line 9, in <module>
    print(resp(round,2))
TypeError: 'float' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 00:20:54) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))

if(temp == "C"):
	resp = ((9 *temp)- 288)/5
	print(resp(round,2))
else: 
	resp = ((5 * temp) - 160)/9
	print(resp(round,2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(resp(round,2))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 00:21:26) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))

if(temp == "C"):
	resp = float((9 *temp)- 288)/5
	print(resp(round,2))
else: 
	resp = float((5 * temp) - 160)/9
	print(resp(round,2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(resp(round,2))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 00:22:01) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))

if(temp == "C"):
	resp = ((9 *temp)- 288)/5
	print(resp(round,2))
else: 
	resp = ((5 * temp) - 160)/9
	print(resp(round,2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(resp(round,2))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 00:22:27) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))

if(temp == "C"):
	resp = ((9 *temp)- 288)/5
	print(resp)
else: 
	resp = ((5 * temp) - 160)/9
	print(resp)
	
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 00:22:33) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))

if(temp == "C"):
	resp = ((9 *temp)- 288)/5
	print(resp)
else: 
	resp = ((5 * temp) - 160)/9
	print(resp)
	
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 00:22:34) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))

if(temp == "C"):
	resp = ((9 *temp)- 288)/5
	print(resp)
else: 
	resp = ((5 * temp) - 160)/9
	print(resp)
	
-- EXECUTION TIME:
0.171553
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.77777777777778
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 00:22:57) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))

if(temp == "C"):
	resp = ((9 *temp)- 288)/5
	print(resp(round,2))
else: 
	resp = ((5 * temp) - 160)/9
	print(resp(round,2))
	
-- EXECUTION TIME:
0.180969
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2445/main.py", line 9, in <module>
    print(resp(round,2))
TypeError: 'float' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 00:22:59) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))

if(temp == "C"):
	resp = ((9 *temp)- 288)/5
	print(resp(round,2))
else: 
	resp = ((5 * temp) - 160)/9
	print(resp(round,2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(resp(round,2))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 00:23:48) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))

if(temp == "C"):
	resp = ((9 *temp)- 288)/5
	print(float(resp(round,2)))
else: 
	resp = ((5 * temp) - 160)/9
	print(resp(round,2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(resp(round,2))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 00:25:33) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))

if(temp == "C"):
	resp = ((9 *temp)- 288)/5
	x = round(resp,2)
	print(x)
else: 
	resp = ((5 * temp) - 160)/9
	x = round(resp,2)
	print(x)
	
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 00:25:41) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))

if(temp == "C"):
	resp = ((9 *temp)- 288)/5
	x = round(resp,2)
	print(x)
else: 
	resp = ((5 * temp) - 160)/9
	x = round(resp,2)
	print(x)
	
-- EXECUTION TIME:
0.15405
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 00:25:57) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))

if(temp == "C"):
	resp = ((9 *temp)- 288)/5
	x = round(resp,2)
	print(x)
else: 
	resp = ((5 * temp) - 160)/9
	x = round(resp,2)
	print(x)
	
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 00:26:00) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))

if(temp == "C"):
	resp = ((9 *temp)- 288)/5
	x = round(resp,2)
	print(x)
else: 
	resp = ((5 * temp) - 160)/9
	x = round(resp,2)
	print(x)
	
-- EXECUTION TIME:
0.131727
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 00:26:18) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))

if(temp == "C"):
	resp = ((9 *temp)- 288)/5
	x = round(resp,2)
	print(x)
else: 
	resp = ((5 * temp) - 160)/9
	x = round(resp,2)
	print(x)
	
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:25:41) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))

if (temp == "C"):
	resp = ((9 * temp)- 288)/5
	x = round(resp,2)
	print(x)
else: 
	resp = ((5 * temp) - 160)/9
	x = round(resp,2)
	print(x)
	
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:42:24) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))

if (temp == "C"):
	resp = (5 * (temp - 32)) /9
	x = round(resp,2)
	print(x)
else: 
	resp = (9 * (temp + 32))/5
	x = round(resp,2)
	print(x)
	
-- OUTPUT:
633.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:42:49) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))

if (temp == "C"):
	resp = (5 * (temp - 32)) /9
	x = round(resp,2)
	print(x)
else: 
	resp = (9 * (temp + 32))/5
	x = round(resp,2)
	print(x)
	
-- OUTPUT:
633.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:43:00) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))

if (temp == "C"):
	resp = (5 * (temp - 32)) /9
	x = round(resp,2)
	print(x)
else: 
	resp = (9 * (temp + 32))/5
	x = round(resp,2)
	print(x)
	
-- OUTPUT:
633.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:48:03) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))
C = (5 * (temp - 32)) /9
F = (9 * (temp + 32))/5

if (temp == "C"):
	resp = C
	x = round(resp,2)
	print(x)
else: 
	resp = F
	x = round(resp,2)
	print(x)
	
-- OUTPUT:
633.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:48:09) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))
C = (5 * (temp - 32)) /9
F = (9 * (temp + 32))/5

if (temp == "C"):
	resp = C
	x = round(resp,2)
	print(x)
else: 
	resp = F
	x = round(resp,2)
	print(x)
	
-- OUTPUT:
633.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:48:42) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))
F = (5 * (temp - 32)) /9
C = (9 * (temp + 32))/5

if (temp == "C"):
	resp = C
	x = round(resp,2)
	print(x)
else: 
	resp = F
	x = round(resp,2)
	print(x)
	
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:48:51) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))
F = (5 * (temp - 32)) /9
C = (9 * (temp + 32))/5

if (temp == "C"):
	resp = C
	x = round(resp,2)
	print(x)
else: 
	resp = F
	x = round(resp,2)
	print(x)
	
-- EXECUTION TIME:
0.172173
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:48:59) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))
F = (5 * (temp - 32)) /9
C = (9 * (temp + 32))/5

if (temp == "C"):
	resp = C
	x = round(resp,2)
	print(x)
else: 
	resp = F
	x = round(resp,2)
	print(x)
	
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:49:42) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))
F = (5 * (temp - 32)) /9
C = (9 * temp + 32)/5

if (temp == "C"):
	resp = C
	x = round(resp,2)
	print(x)
else: 
	resp = F
	x = round(resp,2)
	print(x)
	
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:50:52) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))
C = (5 * (temp - 32)) /9
F = (9 * temp + 32)/5

if (temp == "C"):
	resp = C
	x = round(resp,2)
	print(x)
else: 
	resp = F
	x = round(resp,2)
	print(x)
	
-- OUTPUT:
582.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:51:27) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))
F = (5 * (temp - 32)) /9
C = (9 * temp + 32)/5

if (temp == "C"):
	resp = C
	x = round(resp,2)
	print(x)
else: 
	resp = F
	x = round(resp,2)
	print(x)
	
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:52:03) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))
F = (5 * (temp - 32)) /9
C = (9 * temp - 32)/5

if (temp == C):
	resp = C
	x = round(resp,2)
	print(x)
else: 
	resp = F
	x = round(resp,2)
	print(x)
	
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:52:07) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))
F = (5 * (temp - 32)) /9
C = (9 * temp - 32)/5

if (temp == C):
	resp = C
	x = round(resp,2)
	print(x)
else: 
	resp = F
	x = round(resp,2)
	print(x)
	
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:52:17) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))
F = (5 * (temp - 32)) /9
C = (9 * temp - 32)/5

if (temp == C):
	resp = C
	x = round(resp,2)
	print(x)
else: 
	resp = F
	x = round(resp,2)
	print(x)
	
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:53:05) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))
F = (5 * (temp - 32)) /9
C = (9 * temp - 32)/5

if (temp == C):
	C = (9 * temp - 32)/5
	resp = C
	x = round(resp,2)
	print(x)
else: 
	F = (5 * (temp - 32)) /9
	resp = F
	x = round(resp,2)
	print(x)
	
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:53:14) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))
F = (5 * (temp - 32)) /9
C = (9 * temp - 32)/5

if (temp == C):
	C = (9 * temp - 32)/5
	resp = C
	x = round(resp,2)
	print(x)
else: 
	F = (5 * (temp - 32)) /9
	resp = F
	x = round(resp,2)
	print(x)
	
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:55:03) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))
F = (5 * (temp - 32)) /9
C = (9 * temp - 32)/5

if (temp == C):
	C = (9 * (temp + 32))/5
	resp = C
	x = round(resp,2)
	print(x)
else: 
	F = (5 * (temp - 32)) /9
	resp = F
	x = round(resp,2)
	print(x)
	
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:55:10) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))
F = (5 * (temp - 32)) /9
C = (9 * temp - 32)/5

if (temp == C):
	C = (9 * (temp + 32))/5
	resp = C
	x = round(resp,2)
	print(x)
else: 
	F = (5 * (temp - 32)) /9
	resp = F
	x = round(resp,2)
	print(x)
	
-- EXECUTION TIME:
0.323475
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:56:33) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))
F = (5 * (temp - 32)) /9
C = (9 * temp - 32)/5

if (temp == C):
	C = (9 * (temp + 32))/5
	x = round(C,2)
	print(x)
else: 
	F = (5 * (temp - 32)) /9
	x = round(F,2)
	print(x)
	
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:56:40) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))
F = (5 * (temp - 32)) /9
C = (9 * temp - 32)/5

if (temp == C):
	C = (9 * (temp + 32))/5
	x = round(C,2)
	print(x)
else: 
	F = (5 * (temp - 32)) /9
	x = round(F,2)
	print(x)
	
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:56:57) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))


if (temp == C):
	C = (9 * (temp + 32))/5
	x = round(C,2)
	print(x)
else: 
	F = (5 * (temp - 32)) /9
	x = round(F,2)
	print(x)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (temp == C):
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:57:39) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))
C = (9 * (temp + 32))/5
F = (5 * (temp - 32)) /9

if (temp == C):
	x = round(C,2)
	print(x)
else: 
	x = round(F,2)
	print(x)
	
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:57:46) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))
C = (9 * (temp + 32))/5
F = (5 * (temp - 32)) /9

if (temp == C):
	x = round(C,2)
	print(x)
else: 
	x = round(F,2)
	print(x)
	
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:58:44) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))
C = (9 * (temp + 32))/5
F = (5 * (temp - 32)) /9

if (escala == C):
	x = round(C,2)
	print(x)
else: 
	x = round(F,2)
	print(x)
	
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:01:14) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))
C = (9 * (temp + 32))/5
F = (5 * (temp - 32)) /9

if (escala == "C"):
	x = round(F,2)
	print(x)
else: 
	x = round(C,2)
	print(x)
	
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:02:44) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))
F = (9 * (temp + 32))/5
C = (5 * (temp - 32)) /9

if (escala == "C"):
	x = round(F,2)
	print(x)
else: 
	x = round(C,2)
	print(x)
	
-- OUTPUT:
633.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:02:52) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))
F = (9 * (temp + 32))/5
C = (5 * (temp - 32)) /9

if (escala == "C"):
	x = round(F,2)
	print(x)
else: 
	x = round(C,2)
	print(x)
	
-- OUTPUT:
633.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:03:38) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))
F = (9 * (temp + 32))/5
C = (5 * (temp - 32)) /9

if (escala == "C"):
	x = round(F,2)
	print(x)
else: 
	x = round(C,2)
	print(x)
	
-- EXECUTION TIME:
0.197831
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
633.6
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
57.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:03:45) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))
F = (9 * (temp + 32))/5
C = (5 * (temp - 32)) /9

if (escala == "C"):
	x = round(F,2)
	print(x)
else: 
	x = round(C,2)
	print(x)
	
-- OUTPUT:
633.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:03:49) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))
F = (9 * (temp + 32))/5
C = (5 * (temp - 32)) /9

if (escala == "C"):
	x = round(F,2)
	print(x)
else: 
	x = round(C,2)
	print(x)
	
-- EXECUTION TIME:
0.144922
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
633.6
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
57.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:03:50) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))
F = (9 * (temp + 32))/5
C = (5 * (temp - 32)) /9

if (escala == "C"):
	x = round(F,2)
	print(x)
else: 
	x = round(C,2)
	print(x)
	
-- OUTPUT:
633.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:03:57) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))
F = (9 * (temp + 32))/5
C = (5 * (temp - 32)) /9

if (escala == "C"):
	x = round(F,2)
	print(x)
else: 
	x = round(C,2)
	print(x)
	
-- OUTPUT:
633.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:04:09) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))
F = (9 * (temp + 32))/5
C = (5 * (temp - 32)) /9

if (escala == "C"):
	x = round(F,2)
	print(x)
else: 
	x = round(C,2)
	print(x)
	
-- EXECUTION TIME:
0.162417
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
633.6
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
57.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:04:26) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))
F = (9 * (temp + 32))/5
C = (5 * (temp - 32))/9

if (escala == "C"):
	x = round(F,2)
	print(x)
else: 
	x = round(C,2)
	print(x)
	
-- OUTPUT:
633.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:04:27) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))
F = (9 * (temp + 32))/5
C = (5 * (temp - 32))/9

if (escala == "C"):
	x = round(F,2)
	print(x)
else: 
	x = round(C,2)
	print(x)
	
-- EXECUTION TIME:
0.208247
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
633.6
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
57.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:04:39) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))
F = (9 * (temp + 32))/5
C = (5 * (temp - 32))/9

if (escala == "C"):
	x = round(F,2)
	print(x)
else: 
	x = round(C,2)
	print(x)
	
-- EXECUTION TIME:
0.209815
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
633.6
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
57.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:04:56) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))
F = (9 * (temp + 32))/5
C = (5 * (temp - 32))/9

if (escala == "C"):
	x = round(F,2)
	print(x)
else: 
	x = round(C,2)
	print(x)
	
-- OUTPUT:
633.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:05:04) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))
F = (9 * (temp + 32))/5
C = (5 * (temp - 32))/9

if (escala == "C"):
	x = round(F,2)
	print(x)
else: 
	x = round(C,2)
	print(x)
	
-- OUTPUT:
633.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:05:10) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))
F = (9 * (temp + 32))/5
C = (5 * (temp - 32))/9

if (escala == "C"):
	x = round(F,2)
	print(x)
else: 
	x = round(C,2)
	print(x)
	
-- EXECUTION TIME:
0.172454
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
633.6
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
57.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:05:28) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))
F = (9 * (temp + 32))/5
C = (5 * (temp - 32))/9

if(escala == "C"):
	x = round(F,2)
	print(x)
else: 
	x = round(C,2)
	print(x)
	
-- EXECUTION TIME:
0.136975
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
633.6
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
57.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:06:59) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))
F = (9 * (temp + 32))/5
C = (5 * (temp - 32))/9

if (escala == "C"):
	x = round(F,2)
	print(x)
else: 
	x = round(C,2)
	print(x)
	
-- EXECUTION TIME:
0.167894
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
633.6
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
57.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:07:31) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))
F = (9 * (temp + 32))/5
C = (5 * (temp - 32))/9

if (escala == "C"):
	x = round(F,2)
	print(x)
else: 
	x = round(C,2)
	print(x)
	
-- EXECUTION TIME:
0.164298
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
633.6
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
57.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:07:38) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))
F = (9 * (temp + 32))/5
C = (5 * (temp - 32))/9

if (escala == "C"):
	x = round(F,2)
	print(x)
else: 
	x = round(C,2)
	print(x)
	
-- EXECUTION TIME:
0.225103
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
633.6
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
57.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:07:39) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))
F = (9 * (temp + 32))/5
C = (5 * (temp - 32))/9

if (escala == "C"):
	x = round(F,2)
	print(x)
else: 
	x = round(C,2)
	print(x)
	
-- OUTPUT:
633.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:08:25) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))
F = (9 *(temp + 32))/5
C = (5 *(temp - 32))/9

if (escala == "C"):
	x = round(F,2)
	print(x)
else: 
	x = round(C,2)
	print(x)
	
-- OUTPUT:
633.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:08:27) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))
F = (9 *(temp + 32))/5
C = (5 *(temp - 32))/9

if (escala == "C"):
	x = round(F,2)
	print(x)
else: 
	x = round(C,2)
	print(x)
	
-- EXECUTION TIME:
0.196046
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
633.6
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
57.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:09:37) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))
F = (9 *(temp + 32))/5
C = (5 *(temp - 32))/9

if (escala == "C"):
	x = round(F,2)
	print(x)
else: 
	x = round(C,2)
	print(x)
	
-- OUTPUT:
633.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:09:52) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))
F = (9 *(temp + 32))/5
C = (5 *(temp - 32))/9

if (escala == "C"):
	x = round(F,2)
	print(x)
else: 
	x = round(C,2)
	print(x)
	
-- OUTPUT:
633.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:10:48) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))
F = (9 *(temp + 32))/5
C = (5 *(temp - 32))/9

if (escala == "C"):
	print(round(F,2))
else: 
	print(round(C,2))
	
-- OUTPUT:
633.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:10:55) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))
F = (9 *(temp + 32))/5
C = (5 *(temp - 32))/9

if (escala == "C"):
	print(round(F,2))
else: 
	print(round(C,2))
	
-- OUTPUT:
633.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:10:56) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))
F = (9 *(temp + 32))/5
C = (5 *(temp - 32))/9

if (escala == "C"):
	print(round(F,2))
else: 
	print(round(C,2))
	
-- EXECUTION TIME:
0.154083
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
633.6
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
57.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:11:15) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))
C = (9 *(temp + 32))/5
F = (5 *(temp - 32))/9

if (escala == "C"):
	print(round(F,2))
else: 
	print(round(C,2))
	
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:11:24) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))
C = (9 *(temp + 32))/5
F = (5 *(temp - 32))/9

if (escala == "C"):
	print(round(F,2))
else: 
	print(round(C,2))
	
-- EXECUTION TIME:
0.216215
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
633.6
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:11:47) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))
F = (9 *(temp + 32))/5
C = (5 *(temp - 32))/9

if (escala == "C"):
	print(round(F,2))
else: 
	print(round(C,2))
	
-- OUTPUT:
633.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:14:26) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))
F = (9 *temp + 32)/5
C = (5 *(temp - 32))/9

if (escala == "C"):
	print(round(F,2))
else: 
	print(round(C,2))
	
-- OUTPUT:
582.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:15:30) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))
F = (9 *temp)/5 + 32
C = (5 *(temp - 32))/9

if (escala == "C"):
	print(round(F,2))
else: 
	print(round(C,2))
	
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:15:37) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))
F = (9 *temp)/5 + 32
C = (5 *(temp - 32))/9

if (escala == "C"):
	print(round(F,2))
else: 
	print(round(C,2))
	
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:15:48) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))
F = (9 *temp)/5 + 32
C = (5 *(temp - 32))/9

if (escala == "C"):
	print(round(F,2))
else: 
	print(round(C,2))
	
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:15:55) 
-- CODE:
escala = input("Digite a escala (C/F): ")
temp = float(input("Digite o valor da temperatura: "))
F = (9 *temp)/5 + 32
C = (5 *(temp - 32))/9

if (escala == "C"):
	print(round(F,2))
else: 
	print(round(C,2))
	
-- EXECUTION TIME:
0.184418
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
